minor fixes for translation

--- a/translation.html
+++ b/translation.html
@@ -64,7 +64,7 @@
           <li><a class="nav-link scrollto" href="#how" lang="en">how it works</a></li>
           <li><a class="nav-link scrollto " href="#roadmap" lang="en">roadmap</a></li>
           <li><a class="nav-link scrollto" href="#tokenomics" lang="en">tokenomics</a></li>
-          <li><a class="nav-link scrollto" href="#team" lang="en">Team</a></li>
+          <li><a class="nav-link scrollto" href="#team" lang="en">team</a></li>
           <li><a class="nav-link scrollto" href="https://staking.decentraweb.org" lang="en">staking</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -508,7 +508,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h6 lang="en">Our</h6>
+          <h6 lang="en">our</h6>
           <div class="headline">&nbsp;</div>
           <h2 lang="en">team</h2>
           <p lang="en">
@@ -819,14 +819,14 @@
             <div class="link-section">
               <ul>
                 <li><a href="#about" lang="en">What Is DecentraWeb</a></li>
-                <li><a href="#how" lang="en">how tt works</a></li>
+                <li><a href="#how" lang="en">how it works</a></li>
                 <li><a href="https://docs.google.com/presentation/d/15TbRhxlSgbsKIBUI3Oa97rCQQXYp8xFaetSqIFkRoYI/edit?usp=sharing" lang="en">Deck</a></li>
                 <li><a href="#team" lang="en">team</a></li>
               </ul>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h2>Follow Us On</h2>
+            <h2 lang="en">Follow Us On</h2>
              <div class="social-links mt-3">
               <a href="https://twitter.com/decentra_web" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="https://t.me/decentraweb" class="telegram"><i class="bx bxl-telegram"></i></a>
