home page banner translation

--- a/translation.html
+++ b/translation.html
@@ -100,7 +100,7 @@
         <div class="row">
           <div class="col-md-10 align-items-stretch mb-5 mb-lg-0" data-aos="fade-up">
             <p class="title"><span lang="en">DecentraWeb</span><span lang="en"> is a decentralized</span></p>
-            <h2><span>Implementation <br>of the</span> DNS base <br>
+            <h2 lang="en" data-lang-token="DNS"><span>Implementation <br>of the</span> DNS base <br>
               layer protocol on the <br>
               Ethereum Blockchain.</h2>
             <p class="description" lang="en">Committed to taking back the internet, one layer at a time...</p>
