--- a/translation.html
+++ b/translation.html
@@ -100,14 +100,19 @@
         <div class="row">
           <div class="col-md-10 align-items-stretch mb-5 mb-lg-0" data-aos="fade-up">
             <p class="title"><span lang="en">DecentraWeb</span><span lang="en"> is a decentralized</span></p>
-            <h2 lang="en" data-lang-token="DNS"><span>Implementation <br>of the</span> DNS base <br>
+            <h2 lang="en" class="en"><span>Implementation <br>of the</span> DNS base <br>
               layer protocol on the <br>
               Ethereum Blockchain.</h2>
+              <h2 lang="en" class="other">
+                <span>Implementation of the</span> 
+                <span lang="en">DNS base layer protocol on the </span><br>
+                <span lang="en">Ethereum Blockchain.</span>
+              </h2>
             <p class="description" lang="en">Committed to taking back the internet, one layer at a time...</p>
             <div class="registration">
-              <a href="https://app.uniswap.org/#/swap?outputCurrency=0xe7f58a92476056627f9fdb92286778abd83b285f" target="_blank" class="btn btn-primary active rounded-pill px-4 py-2" role="button" aria-pressed="true">Buy DWEB Tokens</a>
-              <a href="https://dns.decentraweb.org" target="_blank" class="btn btn-outline-light rounded-pill px-4 py-2" role="button" aria-pressed="true">Register Domains</a>
-              <a href="https://opensea.io/collection/dname" target="_blank" class="btn btn-primary active rounded-pill px-2" role="button" aria-pressed="true">Buy TLD NFTs</a>
+              <a href="https://app.uniswap.org/#/swap?outputCurrency=0xe7f58a92476056627f9fdb92286778abd83b285f" target="_blank" class="btn btn-primary active rounded-pill px-4 py-2" role="button" aria-pressed="true" lang="en">Buy DWEB Tokens</a>
+              <a href="https://dns.decentraweb.org" target="_blank" class="btn btn-outline-light rounded-pill px-4 py-2" role="button" aria-pressed="true" lang="en">Register Domains</a>
+              <a href="https://opensea.io/collection/dname" target="_blank" class="btn btn-primary active rounded-pill px-2" role="button" aria-pressed="true" lang="en">Buy TLD NFTs</a>
             </div>
           </div>
         </div>
@@ -1125,6 +1130,13 @@
     });
 
     function changeLang(lang) {
+      if(lang.value == 'en') {
+        $(".en").show();
+        $(".other").hide();
+      } else {
+        $(".en").hide();
+        $(".other").show();
+      }
       window.lang.change(lang.value);
       return false;
     }
