--- a/translation.html
+++ b/translation.html
@@ -104,7 +104,7 @@
               layer protocol on the <br>
               Ethereum Blockchain.</h2>
               <h2 lang="en" class="other">
-                <span>Implementation of the</span><br>
+                <span lang="en">Implementation of the</span><br>
                 <span lang="en">DNS base layer protocol on the </span><br>
                 <span lang="en">Ethereum Blockchain.</span>
               </h2>
