--- a/translation.html
+++ b/translation.html
@@ -1109,13 +1109,13 @@
     $(document).ready(function() {
       var ddData = [
         {
-            text: "English",
+            text: "EN",
             value: 'en',
             selected: true,
             imageSrc: "assets/img/en.png"
         },
         {
-            text: "Chinese",
+            text: "CH",
             value: 'ch',
             selected: false,
             imageSrc: "assets/img/ch.png"
