set new svg image for logo

--- a/translation.html
+++ b/translation.html
@@ -56,7 +56,9 @@
   <header id="header" class="fixed-top d-flex align-items-center ">
     <div class="container d-flex align-items-center justify-content-between">
       <!-- Uncomment below if you prefer to use an image logo -->
-      <a href="/" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
+      <a href="/" class="logo">
+        <object data="assets/img/logoLight.svg" class="img-fluid" ></object>
+      </a>
 
       <nav id="navbar" class="navbar">
         <ul>
