--- a/translation.html
+++ b/translation.html
@@ -57,7 +57,7 @@
     <div class="container d-flex align-items-center justify-content-between">
       <!-- Uncomment below if you prefer to use an image logo -->
       <a href="/" class="logo">
-        <object data="assets/img/logoLight.svg" class="img-fluid" ></object>
+        <object data="assets/img/logoLight.svg"></object>
       </a>
 
       <nav id="navbar" class="navbar">
