--- a/translation.html
+++ b/translation.html
@@ -189,7 +189,7 @@
             <div class="block">
               <div class="shadow-circle"><img src="assets/img/icons/group-line.png"></div>
               <div class="">
-                <h6 lang="en">Individuals</h6>
+                <h6 lang="en" data-lang-token="individuals">Individuals</h6>
                 <p lang="en" data-lang-token="individuals_desc">Purchase your own name or keywords for TLDs.
                 Once registered, you can create associated subdomains such as gardening.hobby or john.doe.</p>
               </div>
@@ -198,7 +198,7 @@
             <div class="block btm">
               <div class="shadow-circle"><img src="assets/img/icons/vector.png"></div>
               <div class="">
-                <h6 lang="en">Stakers</h6>
+                <h6 lang="en" data-lang-token="stakers">Stakers</h6>
                 <p lang="en" data-lang-token="stakers_desc">Users who lock their tokens to earn passive returns on sales of products and services, and those who operate DNS nodes on the DecentraWeb network. </p>
               </div>
             </div>
