Fixed suggestions for ch

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                 <span lang="en" data-lang-token="domain_objects">Domain objects (DomainCoins) could represent the right to own a domain for a year.</span>
                 <div class="quoteby">
                   <img src="assets/img/quoteby.png" alt="" >
-                  <span lang="en">Satoshi Nakamoto</span>
+                  <span lang="en" data-lang-token="satoshi_nakamoto">Satoshi Nakamoto</span>
                 </div>
               </div>
             </div>
