Update OpenSea URL

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="registration">
               <a href="https://app.uniswap.org/#/swap?outputCurrency=0xe7f58a92476056627f9fdb92286778abd83b285f" target="_blank" class="btn btn-primary active rounded-pill px-4 py-2" role="button" aria-pressed="true" lang="en">Buy DWEB Tokens</a>
               <a href="https://dns.decentraweb.org" target="_blank" class="btn btn-outline-light rounded-pill px-4 py-2" role="button" aria-pressed="true" lang="en">Register Domains</a>
-              <a href="https://opensea.io/collection/dname" target="_blank" class="btn btn-primary active rounded-pill px-2" role="button" aria-pressed="true" lang="en">Buy TLD NFTs</a>
+              <a href="https://opensea.io/decentraweb?tab=created" target="_blank" class="btn btn-primary active rounded-pill px-2" role="button" aria-pressed="true" lang="en">Buy TLD NFTs</a>
             </div>
           </div>
         </div>
